crates/ortho-router/tests/snapshots/snapshot_tests__different_net_connectors.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="280" height="140" viewBox="0 30 280 140">
  <rect x="0" y="30" width="280" height="140" fill="white"/>
  <g id="obstacles">
    <rect x="100" y="60" width="80" height="80" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs1"/>
  </g>
  <g id="routes">
    <path d="M 25.4 114.3 L 63.5 114.3 L 63.5 152.39999999999998 L 215.89999999999998 152.39999999999998 L 215.89999999999998 114.3 L 254 114.3" fill="none" stroke="#3498db" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="c2"/>
    <path d="M 25.4 76.19999999999999 L 63.5 76.19999999999999 L 63.5 50.8 L 215.89999999999998 50.8 L 215.89999999999998 76.19999999999999 L 254 76.19999999999999" fill="none" stroke="#e74c3c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="c1"/>
  </g>
  <g id="ports">
    <circle cx="30" cy="80" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="p1"/>
    <line x1="30" y1="80" x2="40" y2="80" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="30" cy="120" r="4" fill="#3498db" stroke="#246a99" stroke-width="1" data-id="p2"/>
    <line x1="30" y1="120" x2="40" y2="120" stroke="#246a99" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="250" cy="80" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="p3"/>
    <line x1="250" y1="80" x2="240" y2="80" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="250" cy="120" r="4" fill="#3498db" stroke="#246a99" stroke-width="1" data-id="p4"/>
    <line x1="250" y1="120" x2="240" y2="120" stroke="#246a99" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
