crates/ortho-router/tests/snapshots/snapshot_tests__different_nets_corner_meeting.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="230" height="160" viewBox="0 20 230 160">
  <rect x="0" y="20" width="230" height="160" fill="white"/>
  <g id="obstacles">
  </g>
  <g id="routes">
    <path d="M 25.4 50.8 L 127 50.8 L 127 114.3 L 203.2 114.3" fill="none" stroke="#e74c3c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="net_a_conn"/>
    <path d="M 25.4 152.39999999999998 L 114.3 152.39999999999998 L 114.3 76.19999999999999 L 203.2 76.19999999999999" fill="none" stroke="#3498db" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="net_b_conn"/>
  </g>
  <g id="ports">
    <circle cx="30" cy="50" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="NET_A_sym"/>
    <line x1="30" y1="50" x2="40" y2="50" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="30" cy="150" r="4" fill="#3498db" stroke="#246a99" stroke-width="1" data-id="NET_B_sym"/>
    <line x1="30" y1="150" x2="40" y2="150" stroke="#246a99" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="200" cy="120" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="NET_A_src"/>
    <line x1="200" y1="120" x2="190" y2="120" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="200" cy="80" r="4" fill="#3498db" stroke="#246a99" stroke-width="1" data-id="NET_B_src"/>
    <line x1="200" y1="80" x2="190" y2="80" stroke="#246a99" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
