crates/ortho-router/tests/snapshots/snapshot_tests__different_nets_horizontal_overlap.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="196" height="492" viewBox="215 -30 196 492">
  <rect x="215" y="-30" width="196" height="492" fill="white"/>
  <g id="obstacles">
    <rect x="245" y="0" width="18" height="28" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="V10V_Symbol"/>
    <rect x="245" y="100" width="18" height="28" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="V5V_Symbol"/>
    <rect x="245" y="200" width="18" height="28" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="V3V3_Symbol"/>
  </g>
  <g id="routes">
    <path d="M 254 25.4 L 254 63.5 L 330.2 63.5 L 330.2 152.39999999999998 L 381 152.39999999999998" fill="none" stroke="#e74c3c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="v10v_conn"/>
    <path d="M 254 228.6 L 254 241.29999999999998 L 330.2 241.29999999999998 L 330.2 177.79999999999998 L 381 177.79999999999998" fill="none" stroke="#2ecc71" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="v3v3_conn"/>
    <path d="M 254 127 L 254 165.1 L 317.5 165.1 L 317.5 266.7 L 381 266.7" fill="none" stroke="#3498db" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="v5v_conn1"/>
    <path d="M 254 127 L 254 165.1 L 317.5 165.1 L 317.5 431.79999999999995 L 342.9 431.79999999999995" fill="none" stroke="#3498db" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="v5v_conn2"/>
  </g>
  <g id="junctions">
    <circle cx="317.5" cy="266.7" r="3" fill="#3498db"/>
  </g>
  <g id="ports">
    <circle cx="254" cy="28" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="V10V"/>
    <line x1="254" y1="28" x2="254" y2="38" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="254" cy="128" r="4" fill="#3498db" stroke="#246a99" stroke-width="1" data-id="V5V"/>
    <line x1="254" y1="128" x2="254" y2="138" stroke="#246a99" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="254" cy="228" r="4" fill="#2ecc71" stroke="#208e4f" stroke-width="1" data-id="V3V3"/>
    <line x1="254" y1="228" x2="254" y2="238" stroke="#208e4f" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="381" cy="152" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="V10V_src"/>
    <line x1="381" y1="152" x2="371" y2="152" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="381" cy="267" r="4" fill="#3498db" stroke="#246a99" stroke-width="1" data-id="V5V_src1"/>
    <line x1="381" y1="267" x2="371" y2="267" stroke="#246a99" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="343" cy="432" r="4" fill="#3498db" stroke="#246a99" stroke-width="1" data-id="V5V_src2"/>
    <line x1="343" y1="432" x2="333" y2="432" stroke="#246a99" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="381" cy="178" r="4" fill="#2ecc71" stroke="#208e4f" stroke-width="1" data-id="V3V3_src"/>
    <line x1="381" y1="178" x2="371" y2="178" stroke="#208e4f" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
