crates/ortho-router/tests/snapshots/snapshot_tests__grid_of_obstacles.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="350" height="240" viewBox="-10 20 350 240">
  <rect x="-10" y="20" width="350" height="240" fill="white"/>
  <g id="obstacles">
    <rect x="50" y="50" width="50" height="40" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs_0_0"/>
    <rect x="130" y="50" width="50" height="40" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs_0_1"/>
    <rect x="210" y="50" width="50" height="40" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs_0_2"/>
    <rect x="50" y="120" width="50" height="40" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs_1_0"/>
    <rect x="130" y="120" width="50" height="40" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs_1_1"/>
    <rect x="210" y="120" width="50" height="40" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs_1_2"/>
    <rect x="50" y="190" width="50" height="40" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs_2_0"/>
    <rect x="130" y="190" width="50" height="40" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs_2_1"/>
    <rect x="210" y="190" width="50" height="40" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs_2_2"/>
  </g>
  <g id="routes">
    <path d="M 25.4 114.3 L 25.4 114.3 L 25.4 114.3 L 292.09999999999997 114.3 L 292.09999999999997 114.3 L 304.79999999999995 114.3" fill="none" stroke="#d94a4a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="c1"/>
  </g>
  <g id="ports">
    <circle cx="20" cy="120" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p_left"/>
    <line x1="20" y1="120" x2="30" y2="120" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="310" cy="120" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p_right"/>
    <line x1="310" y1="120" x2="300" y2="120" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
