crates/ortho-router/tests/snapshots/snapshot_tests__l_shaped_route.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="160" height="160" viewBox="20 20 160 160">
  <rect x="20" y="20" width="160" height="160" fill="white"/>
  <g id="obstacles">
  </g>
  <g id="routes">
    <path d="M 50.8 50.8 L 152.39999999999998 50.8 L 152.39999999999998 152.39999999999998" fill="none" stroke="#d94a4a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="c1"/>
  </g>
  <g id="ports">
    <circle cx="50" cy="50" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p1"/>
    <line x1="50" y1="50" x2="60" y2="50" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="150" cy="150" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p2"/>
    <line x1="150" y1="150" x2="150" y2="140" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
