crates/ortho-router/tests/snapshots/snapshot_tests__multiple_obstacles.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="290" height="220" viewBox="20 20 290 220">
  <rect x="20" y="20" width="290" height="220" fill="white"/>
  <g id="obstacles">
    <rect x="50" y="50" width="80" height="60" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs1"/>
    <rect x="200" y="50" width="80" height="60" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs2"/>
    <rect x="125" y="150" width="80" height="60" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs3"/>
  </g>
  <g id="ports">
  </g>
</svg>
